<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">DForum</string>
    <string name="trang_chu">Trang chủ</string>
    <string name="them_bai_viet">Thêm bài viết</string>
    <string name="trang_ca_nhan">Cá nhân</string>
    <string name="admin">Quản trị</string>
    <string name="tim_kiem">Tìm kiếm</string>
    <string name="thong_bao">Thông báo</string>
    <string name="kiem_duyet_bai_viet">Kiểm duyệt bài viết</string>
    <string name="them_dien_dan">Thêm diễn dàn</string>
    <string name="dang_bai_viet">Đăng bài viết</string>
    <string name="tao_bai_viet">Tạo bài viết</string>
    <string name="chuyen_muc">Chuyên mục</string>
    <string name="the_loai">Thể loại</string>
    <string name="tieu_de">Tiêu đề</string>
    <string name="noi_dung">Nội dung</string>
    <string name="ban_muon_chia_se_gi">Bạn muốn chia sẻ gì?</string>
    <string name="tao_dien_dan_moi">Tạo diễn đàn mới</string>
    <string name="ten_dien_dan">Tên diễn đàn</string>
    <string name="dien_dan_">Diễn đàn?</string>
    <string name="dien_dan">Diễn đàn</string>
    <string name="tao_dien_dan">Tạo diễn đàn</string>
    <string name="mo_ta_dien_dan">Mô tả diễn đàn</string>
    <string name="mo_ta">Mô tả?</string>
    <string name="tat_ca">Tất cả</string>
    <string name="xem_them">Xem thêm</string>
    <string name="hoi_dap">Hỏi đáp</string>
    <string name="chia_se_kien_thuc">Chia sẻ kiến thức</string>
    <string name="luot_xem">Lượt xem</string>
    <string name="username">Username</string>
    <string name="tieu_de_bai_viet">Tiêu đề bài viết</string>
    <string name="viet_binh_luan">Viết bình luận...</string>
    <string name="danh_sach_dien_dan">Danh sách diễn đàn</string>
    <string name="tieu_de_bai_viet_">Tiêu đề bài viết?</string>
    <string name="dang">Đăng</string>
    <string name="dang_bai">Đăng bài</string>
    <string name="edit_name">Chỉnh sửa tên</string>
    <string name="chinh_sua">Chỉnh sửa</string>
    <string name="anh_dai_dien">Ảnh đại diện</string>
    <string name="nick_name">Tên hiển thị</string>
    <string name="add">Thêm</string>
    <string name="length_story">0 / 100</string>
    <string name="length_nickname">0 / 25</string>
    <string name="xoa">Xóa</string>
    <string name="copy">Sao chép</string>
    <string name="quay_lai">Quay lại</string>
    <string name="Choose_avatar">Chọn ảnh đại diện</string>
    <string name="view_avatar">Xem ảnh đại diện</string>
    <string name="remove_avatar">Gỡ ảnh đại diện</string>
    <string name="posts">Bài viết trên diễn đàn</string>
    <string name="kiem_duyet_toan_bo">Kiểm duyệt toàn bộ</string>
    <string name="duyet_bai_dang">Duyệt bài</string>
    <string name="khong_duyet_bai_dang">Không duyệt</string>
    <string name="update">Cập nhật</string>
    <string name="cancel">Hủy</string>
    <string name="edit">Chỉnh sửa</string>
    <string name="tai_anh">Tải ảnh</string>
    <string name="email">Email</string>
    <string name="password">Mật khẩu</string>
    <string name="confirm_password">Nhập lại mật khẩu</string>
    <string name="danh_dau_la_da_doc">Đánh dấu là đã đọc</string>
    <string name="xoa_thong_bao_nay">Xoá thông báo này</string>
    <string name="danh_dau_tat_ca_la_da_doc">Đánh dấu tất cả là đã đọc</string>
    <string name="developer_forum">Developer Forum</string>
    <string name="logout">Đăng xuất</string>
    <string name="remove_account">Xóa tài khoản</string>
    <string name="rename">Chỉnh sửa tên</string>
    <string name="lock_account">Khóa tài khoản</string>
    <string name="bai_viet">Bài viết</string>
    <string name="loc">Lọc</string>
    <string name="updatePassword">Đổi mật khẩu</string>
    <string name="confirmNewPassword">Nhập lại mật khẩu mới</string>
    <string name="newPassword">Mật khẩu mới</string>
    <string name="oldPassword">Mật khẩu cũ</string>
    <string name="noPost">Bạn chưa có bài viết nào trên diễn đàn</string>
    <string name="login">Đăng nhập</string>
    <string name="register_account">Đăng ký tài khoản</string>
    <string name="register">Đăng ký</string>
    <string name="cac_dien_dan_noi_bat">Các diễn đàn nổi bật</string>
    <string name="noi_quy_dien_dan">Nội quy diễn đàn</string>
    <string name="admin_dien_dan">Admin diễn đàn</string>
    <string name="cac_dien_dan_moi">Các diễn đàn mới</string>
    <string name="dien_dan_chua_co_bai_viet_nao">Diễn đàn chưa có bài viết nào</string>
    <string name="xoa_bo_loc">Xóa bộ lọc</string>
    <string name="rep">Phản hồi</string>
    <string name="datetime">17/03/2023 18:11</string>
    <string name="huy">· Hủy</string>
    <string name="reply">Đang phản hồi</string>
    <string name="moi_nhat">Mới nhất</string>
    <string name="sap_xep">Sắp xếp</string>
    <string name="cu_nhat">Cũ nhất</string>
    <string name="xoa_sap_xep">Xóa sắp xếp</string>
    <string name="luot_xem_tang_dan">Lượt xem tăng dần</string>
    <string name="luot_xem_giam_dan">Lượt xem giảm dần</string>
    <string name="tieu_de_az">Tiêu đề từ A-Z</string>
    <string name="tieu_de_za">Tiêu đề từ Z-A</string>
    <string name="forgot_password">Quên mật khẩu ?</string>
    <string name="same_name">Tên này đã có người sử dụng !</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="filter_date">Khoảng ngày</string>
    <string name="forum">Diễn đàn</string>
    <string name="detail">Xem chi tiết</string>
    <string name="dark_mode">Chế độ tối</string>
    <string name="system">Hệ thống</string>
    <string name="account">Tài khoản</string>
    <string name="chinh_sach"><![CDATA[Pháp lý & chính sách]]></string>
    <string name="help">Trợ giúp</string>
    <string name="report_problem">Báo cáo sự cố kỹ thuật</string>
    <string name="filter">Lọc</string>
    <string name="start_date">Ngày bắt đầu</string>
    <string name="end_date">Ngày kết thúc</string>
    <string name="detail_dark_mode">Nếu bạn chọn hệ thống, DForum sẽ tự động điều chỉnh giao diện theo các cài đặt hệ thống trên thiết bị.</string>
    <string name="turn_off">Tắt</string>
    <string name="turn_on">Bật</string>
    <string name="hot_forum">Diễn đàn nổi bật</string>
    <string name="search">Tìm kiếm...</string>
    <string name="noi_quy">1. Tôn trọng và lịch sự: Đảm bảo bạn luôn tôn trọng và lịch sự trong giao tiếp với các thành viên khác trên diễn đàn. Tránh sử dụng ngôn ngữ xúc phạm, công kích hoặc gây hiểu lầm. \n2. Tránh spam và quảng cáo: Không đăng bài viết trùng lặp hoặc spam trên diễn đàn. Nếu bạn muốn chia sẻ thông tin hay sản phẩm, hãy đảm bảo nó có liên quan đến chủ đề và có giá trị cho cộng đồng. \n3. Đăng bài đúng chuyên mục: Trước khi đăng bài viết mới, hãy đảm bảo rằng bài viết của bạn đúng chủ đề và được đăng trong chuyên mục phù hợp. Điều này giúp các thành viên khác dễ dàng tìm kiếm thông tin và tương tác với bạn. \n4. Đặt tiêu đề rõ ràng và mô tả bài viết: Khi đăng bài mới, hãy sử dụng tiêu đề rõ ràng và mô tả ngắn gọn nội dung bài viết của bạn. Điều này giúp người đọc hiểu được vấn đề bạn đang gặp phải hoặc kiến thức bạn muốn chia sẻ. \n5. Không vi phạm bản quyền: Đảm bảo rằng bạn không vi phạm bản quyền khi đăng bài viết, chia sẻ mã nguồn hoặc tài liệu khác. Nếu bạn sử dụng mã nguồn từ nguồn khác, hãy tuân thủ theo các quy định và yêu cầu của tác giả.</string>
</resources>