<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/tbAddNewForum"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimaryVariant"
        app:layout_scrollFlags="scroll|enterAlways"
        app:navigationContentDescription="@string/quay_lai"
        android:elevation="@dimen/_5sdp"
        app:navigationIcon="@drawable/round_arrow_back_black_24"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:title="@string/tao_dien_dan_moi"
        app:titleTextColor="?attr/colorOnSecondary" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/_10sdp">

        <ProgressBar
            android:id="@+id/pbForum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:indeterminateTint="@color/main_color"
            android:visibility="gone" />

        <TextView
            android:id="@+id/tvNameForum"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_5sdp"
            android:text="@string/ten_dien_dan"
            android:textSize="@dimen/_13sdp" />

        <EditText
            android:id="@+id/edtNameForum"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvNameForum"
            android:layout_marginBottom="@dimen/_10sdp"
            android:background="@drawable/edit_text_radius_5"
            android:gravity="top"
            android:hint="@string/dien_dan"
            android:inputType="textMultiLine"
            android:paddingStart="@dimen/_10sdp"
            android:textColorHint="@color/gray_color"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:id="@+id/tvDesForum"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/edtNameForum"
            android:layout_marginBottom="@dimen/_5sdp"
            android:text="@string/mo_ta_dien_dan"
            android:textSize="@dimen/_13sdp" />

        <EditText
            android:id="@+id/edtDesForum"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/btnShowListForum"
            android:layout_below="@id/tvDesForum"
            android:layout_marginBottom="@dimen/_10sdp"
            android:background="@drawable/edit_text_radius_5"
            android:gravity="top"
            android:hint="@string/mo_ta"
            android:importantForAutofill="no"
            android:inputType="textMultiLine"
            android:paddingStart="@dimen/_10sdp"
            android:paddingTop="@dimen/_10sdp"
            android:textColorHint="@color/gray_color"
            tools:ignore="RtlSymmetry" />

        <Button
            android:id="@+id/btnShowListForum"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="@dimen/_5sdp"
            android:background="@drawable/button_radius_10"
            android:text="@string/tao_dien_dan"
            android:letterSpacing="0.02"
            android:textColor="@color/white"
            android:textAllCaps="false"
            android:textSize="@dimen/_15sdp" />
    </RelativeLayout>
</LinearLayout>