<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.activity.AddPostsActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/tbAddPost"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:layout_scrollFlags="scroll|enterAlways"
        app:navigationIcon="@drawable/ic_arrow_back_white_24"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:title="@string/dang_bai"
        app:titleTextColor="@android:color/white"/>

    <LinearLayout
        android:id="@+id/llAddPost"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/tbAddPost"
        android:orientation="vertical"
        android:padding="@dimen/_10sdp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_10sdp"
            android:orientation="horizontal"
            android:baselineAligned="false">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_5sdp"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_5sdp"
                    android:text="@string/chuyen_muc"
                    android:textSize="@dimen/_13sdp" />

                <Spinner
                    android:id="@+id/spnCategory"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_5sdp"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_5sdp"
                    android:text="@string/dien_dan"
                    android:textSize="@dimen/_13sdp" />

                <Spinner
                    android:id="@+id/spnForum"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_5sdp"
            android:text="@string/tieu_de"
            android:textSize="@dimen/_13sdp" />

        <EditText
            android:id="@+id/edtTitlePost"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_10sdp"
            android:background="@drawable/edit_text_radius_5"
            android:hint="@string/tieu_de_bai_viet_"
            android:inputType="text"
            android:textColorHint="@color/gray_color"
            tools:ignore="Autofill" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_5sdp"
            android:text="@string/noi_dung"
            android:textSize="@dimen/_13sdp" />

        <EditText
            android:id="@+id/edtContentPost"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/edit_text_radius_5"
            android:gravity="top"
            android:hint="@string/ban_muon_chia_se_gi"
            android:inputType="textMultiLine"
            android:textColorHint="@color/gray_color" />
    </LinearLayout>
</RelativeLayout>