<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black">

    <com.github.chrisbanes.photoview.PhotoView
        android:id="@+id/imvAvatarFullSize"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:contentDescription="@string/view_avatar"
        android:src="@drawable/no_avatar" />

    <RelativeLayout
        android:id="@+id/rlShowMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="@color/black_opacity"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imvBack"
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_30sdp"
            android:layout_alignParentStart="true"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:contentDescription="@string/quay_lai"
            android:src="@drawable/ic_arrow_back_white_24" />

        <ImageView
            android:id="@+id/imvDownload"
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_30sdp"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:contentDescription="@string/tai_anh"
            android:src="@drawable/baseline_download_24" />
    </RelativeLayout>
</RelativeLayout>